--- a/templates/js9.html
+++ b/templates/js9.html
@@ -5,12 +5,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link type="text/css" rel="stylesheet" href="{{ static_url("js9support.css") }}">
-  <link type="text/css" rel="stylesheet" href="{{ static_url("js9.css") }}">
-  <link rel="apple-touch-icon" href="{{ static_url("images/js9-apple-touch-icon.png") }}">
-  <script type="text/javascript" src="{{ static_url("js9support.min.js") }}"></script>
-  <script type="text/javascript" src="{{ static_url("js9.min.js") }}"></script>
-  <script type="text/javascript" src="{{ static_url("js9plugins.js") }}"></script>
+  <link type="text/css" rel="stylesheet" href="js9/js9support.css">
+  <link type="text/css" rel="stylesheet" href="js9/js9.css">
+  <link rel="apple-touch-icon" href="/images/js9-apple-touch-icon.png">
+  <script type="text/javascript" src="js9/js9support.min.js"></script>
+  <script type="text/javascript" src="js9/js9.min.js"></script>
+  <script type="text/javascript" src="js9/js9plugins.js"></script>
   <style type="text/css">
       #centerdiv {
           position: absolute;
