--- a/templates/js9.html
+++ b/templates/js9.html
@@ -2,16 +2,21 @@
    "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link type="text/css" rel="stylesheet" href="js9/js9support.css">
-  <link type="text/css" rel="stylesheet" href="js9/js9.css">
-  <link rel="apple-touch-icon" href="/images/js9-apple-touch-icon.png">
-  <script type="text/javascript" src="js9/js9support.min.js"></script>
-  <script type="text/javascript" src="js9/js9.min.js"></script>
-  <script type="text/javascript" src="js9/js9plugins.js"></script>
-  <style type="text/css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="js9/js9support.css">
+    <link type="text/css" rel="stylesheet" href="js9/js9.css">
+    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css"
+    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css"
+
+    <link rel="apple-touch-icon" href="/images/js9-apple-touch-icon.png">
+    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="bootstrap/js/jquery.min.js"></script>
+    <script type="text/javascript" src="js9/js9support.min.js"></script>
+    <script type="text/javascript" src="js9/js9.min.js"></script>
+    <script type="text/javascript" src="js9/js9plugins.js"></script>
+    <style type="text/css">
       #centerdiv {
           position: absolute;
           margin: auto;
@@ -22,10 +27,14 @@
           width: 512px;
           height: 512px;
       }
-  </style>
-  <title>JS9</title>
+    </style>
+    <title>MMTO Mount Alignment Telescope</title>
 </head>
 <body>
+    <div class="page-header" align="center">
+        <h1>MMT Mount Alignment Telescope</h1>
+    </div>
+
     <div id="centerdiv">
     <div class="JS9Menubar"></div>
     <div class="JS9"></div>
