--- a/templates/matcam.html
+++ b/templates/matcam.html
@@ -1,15 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link type="text/css" rel="stylesheet" href="js9/js9support.css">
     <link type="text/css" rel="stylesheet" href="js9/js9.css">
-    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css"
-    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css"
-
+    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
     <link rel="apple-touch-icon" href="/images/js9-apple-touch-icon.png">
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="bootstrap/js/jquery.min.js"></script>
@@ -28,25 +26,25 @@
           height: 512px;
       }
       .form-inline label {
-          margin-left: 10px;
+          margin-left: 15px;
+          margin-right: 5px;
       }
     </style>
     <title>MMTO Mount Alignment Telescope</title>
 </head>
 <body>
     <div class="page-header" align="center">
-        <h1>MMT Mount Alignment Telescope</h1>
+        <h1 class="display-4">MMT Mount Alignment Telescope</h1>
     </div>
 
-    <div id="centerdiv">
-
-        <p>
-            <div class="row">
-                <div class='col-lg-9'>
+    <div class="container">
+        <div id="centerdiv">
+            <div class="row justify-content-between">
+                <div class='col-10'>
                     <form class="form-inline">
                         <div class="form-group">
                             <label for="filter">Filter:</label>
-                            <select class="form-control" id="filter">
+                            <select class="form-control form-control-sm" id="filter">
                                 {% for f in args['filters'] %}
                                     {% if f == args['filter'] %}
                                         <option selected value={{ f }}>{{ f }}</option>
@@ -56,7 +54,7 @@
                                 {% end %}
                             </select>
                             <label for="exptype">Exposure Type:</label>
-                            <select class="form-control" id="exptype">
+                            <select class="form-control form-control-sm" id="exptype">
                                 {% for f in args['frame_types'] %}
                                     {% if f == 'Light' %}
                                         <option selected value={{ f }}>{{ f }}</option>
@@ -66,38 +64,108 @@
                                 {% end %}
                             </select>
                             <label for="exptime">Exposure Time (sec):</label>
-                            <input type="number" min=0.0 max=3600.0 step=0.1 value=1.0 id="exptime">
+                            <input class="form-control form-control-sm" type="number" min=0.0 max=3600.0 step=0.1 value=1.0 id="exptime">
                         </div>
                     </form>
                 </div>
-                <div class='col-lg-3'>
+                <div class='col-2'>
                     <span class="input-group-btn">
                         <button type="button" id="expose" class="btn btn-primary">Expose</button>
                     </span>
                 </div>
-                <script>
-                    $('#expose').on('click', function() {
-                        $('#expose').prop("disabled", true)
-                        var exptype = $('#exptype').val();
-                        var exptime = $('#exptime').val();
-                        var filt = $('#filter').val();
-                        var url = "expose?filt=" + filt + "&exptype=" + exptype + "&exptime=" + exptime;
-                        $.get(url, function(data, status) {
-                            var logstuff = data + status;
-                            $('#expose').prop("disabled", false)
-                        });
-                        JS9.CloseImage();
-                        JS9.Load("latest");
-                    });
-                </script>
             </div>
-        </p>
-        <p>
-            <div class="JS9Menubar" data-width="768px"></div>
-            <div class="JS9" data-width="768px" data-height="512px"></div>
-            <div style="margin-top: 2px;"><div class="JS9Colorbar" data-width="768px"></div>
-        </p>
-    </div>
+            <div class="row justify-content-left">
+                <div class='col align-self-left'>
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="form-check-label">
+                                Enable Cooling:
+                                {% if args['cooling'] == "On" %}
+                                    <input id="cooling" type="checkbox" class="form-check-input" checked>
+                                {% else %}
+                                    <input id="cooling" type="checkbox" class="form-check-input">
+                                {% end %}
+                            </label>
+                            <label for="settemp">Set Temp (˚C):</label>
+                            <input class="form-control form-control-sm" type="number" min=-30.0 max=30.0 step=0.1 value={{ args['requested_temp'] }} id="settemp">
+                            <button id="conftemp" class="btn btn-primary btn-sm">Configure</button>
+                        </div>
+                    </form>
+                </div>
 
+            </div>
+            <div class="row justify-content-between align-items-center">
+                <div class='col-5'>
+                    <b>Camera Temp:</b> <div id="ctemp">N/A ˚C</div>
+                </div>
+                <div class='col-5'>
+                    <b>Cooling Power:</b> <div id="cpower">N/A%</div>
+                </div>
+                <div class="col-2">
+                    <span class="input-group-btn">
+                        {% if args['status'] %}
+                            <button type="button" id="connect" class="btn btn-success btn-sm">Reconnect</button>
+                        {% else %}
+                            <button type="button" id="connect" class="btn btn-danger btn-sm">Connect</button>
+                        {% end %}
+                    </span>
+                </div>
+            </div>
+            <script>
+                $('#expose').on('click', function() {
+                    $('#expose').prop("disabled", true)
+                    var exptype = $('#exptype').val();
+                    var exptime = $('#exptime').val();
+                    var filt = $('#filter').val();
+                    var url = "expose?filt=" + filt + "&exptype=" + exptype + "&exptime=" + exptime;
+                    $.get(url, function(data, status) {
+                        var logstuff = data + status;
+                        $('#expose').prop("disabled", false);
+                    });
+                    JS9.CloseImage();
+                    JS9.Load("latest");
+                });
+                $('#cooling').on('click', function() {
+                    $.get("cooling", function(data, status) {
+                        var logstuff = data + status;
+                    });
+                });
+                $('#conftemp').on('click', function(){
+                    var temp = $('#settemp').val();
+                    var url = "temperature?temp=" + temp;
+                    $('#settemp').val(temp);
+                    $.get(url, function(data, status) {
+                        var logstuff = data + status;
+                    });
+                });
+                $('#connect').on('click', function(){
+                    $.get("reset", function(data, status) {
+                        var logstuff = data + status;
+                    });
+                });
+
+                (function update() {
+                    $.getJSON("status", {format: "json"}).done(function(data) {
+                        $('#ctemp').html(data['temperature'] + " ˚C");
+                        $('#cpower').html(data['cooling_power'] + "%");
+                        if (data['cooling'] == "On") {
+                            $('#cooling').prop('checked', true);
+                        } else {
+                            $('#cooling').prop('checked', false);
+                        };
+                        setTimeout(update, 5000);
+                    });
+                })();
+
+            </script>
+            <div class='row'>
+                <div class='col-12'>
+                    <div class="JS9Menubar" data-width="768px"></div>
+                    <div class="JS9" data-width="768px" data-height="512px"></div>
+                    <div style="margin-top: 2px;"><div class="JS9Colorbar" data-width="768px"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
