better handle getting status when camera offline

--- a/templates/matcam.html
+++ b/templates/matcam.html
@@ -107,7 +107,7 @@
                         {% if args['status'] %}
                             <button type="button" id="connect" class="btn btn-success btn-sm">Reconnect</button>
                         {% else %}
-                            <button type="button" id="connect" class="btn btn-danger btn-sm">Connect</button>
+                            <button type="button" id="connect" class="btn btn-danger btn-sm">Reconnect</button>
                         {% end %}
                     </span>
                 </div>
