check that a cmap was actuall received....

--- a/templates/matcam.html
+++ b/templates/matcam.html
@@ -148,7 +148,9 @@
                     JS9.CloseImage();
                     JS9.Load("latest", {onload: function() {
                         JS9.AddRegions("circle", {x: x, y: y, radius: radius});
-                        JS9.SetColormap(cmap['colormap'], cmap['contrast'], cmap['bias']);
+                        if (cmap != null) {
+                            JS9.SetColormap(cmap['colormap'], cmap['contrast'], cmap['bias']);
+                        };
                     }});
                 });
                 $('#cooling').on('click', function() {
