--- a/camsrv/web_resources/templates/sim.html
+++ b/camsrv/web_resources/templates/sim.html
@@ -33,6 +33,9 @@
       .form-inline button {
           margin-left: 10px;
       }
+      .row {
+          margin-top: 20px;
+      }
     </style>
     <title>MMTO Camera Interface Simulator</title>
 <body>
@@ -72,11 +75,6 @@
                     <button type="button" id="expose" class="btn btn-primary">Expose</button>
                 </form>
             </div>
-            <div class='col-2'>
-                <span class="input-group-btn">
-
-                </span>
-            </div>
         </div>
         <div class="row justify-content-left">
             <div class='col align-self-left'>
@@ -93,26 +91,22 @@
                         <label for="settemp">Set Temp (˚C):</label>
                         <input class="form-control form-control-sm" type="number" min=-30.0 max=30.0 step=0.1 value={{ args['requested_temp'] }} id="settemp">
                         <button id="conftemp" class="btn btn-primary btn-sm">Configure</button>
+                        {% if args['status'] %}
+                            <button type="button" id="connect" class="btn btn-success btn-sm">Reconnect</button>
+                        {% else %}
+                            <button type="button" id="connect" class="btn btn-danger btn-sm">Reconnect</button>
+                        {% end %}
                     </div>
                 </form>
             </div>
 
         </div>
-        <div class="row justify-content-between align-items-center">
-            <div class='col-5'>
-                <b>Camera Temp:</b> <div id="ctemp">N/A ˚C</div>
-            </div>
-            <div class='col-5'>
-                <b>Cooling Power:</b> <div id="cpower">N/A%</div>
-            </div>
-            <div class="col-2">
-                <span class="input-group-btn">
-                    {% if args['status'] %}
-                        <button type="button" id="connect" class="btn btn-success btn-sm">Reconnect</button>
-                    {% else %}
-                        <button type="button" id="connect" class="btn btn-danger btn-sm">Reconnect</button>
-                    {% end %}
-                </span>
+        <div class="row justify-content-left">
+            <div class='col align-self-left'>
+                <div class="form-inline">
+                    <label for="ctemp"><b>Camera Temp:</b></label> <div id="ctemp">N/A ˚C</div>
+                    <label for="cpower"><b>Cooling Power:</b></label> <div id="cpower">N/A%</div>
+                </div>
             </div>
         </div>
         <script>
